--- a/index.html
+++ b/index.html
@@ -19,6 +19,27 @@
     height: 60vh;
     min-height: 400px;
     }
+
+    a:link {
+    color: black;
+    font-weight: bold;
+    }
+
+    a:active {
+    color: black;
+    font-weight: bold;
+    }
+
+    a:visited {
+    color: black;
+    font-weight: bold;
+    }
+
+    a:hover {
+    color: black;
+    font-weight: bold;
+    }
+    
     
     p {
     margin-bottom: 3vh;
